# cv-final-project

./: .gitignore  CMakeLists.txt  README.md
data/: cascade.xml
data/models/: cascade_56samples.xml  cascade_final.xml
data/train/: bg.txt
data/train/positive/: sample_batch-resize.sh
src/: CMakeLists.txt  find-tree.cpp  preprocess.cpp  preprocess.h  seeker.cpp  seeker.h  train.cpp
